# lmslogger

./: .gitignore  CONTRIBUTING.md  README.md  lmslogger.service  lmslogger.service.template  pyproject.toml  requirements.txt
docs/: SDLC.md  constitution.md
src/: config.py  daemon.py  network.py
src/lmslogger/: __init__.py  config.py  daemon.py  network.py
src/lmslogger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_daemon.py
